--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.6.1",
+    "@tauri-apps/cli": "^2.0.0-rc.13",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.78.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0-rc.1",
     "monaco-editor": "^0.51.0",
     "monaco-themes": "^0.4.4"
   }
